# sql_cost_optimizer_env

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
server/: app.py
src/: environment.py  graders.py  main.py  models.py  rewards.py
src/tasks/: task1_index_advisor.py  task2_query_rewriter.py  task3_schema_normalizer.py
tests/: test_environment.py  test_graders.py  test_rewards.py
