[project]
name = "sql-cost-optimizer-env"
version = "1.0.0"
description = "SQL query optimization environment for AI agents"
authors = [{name = "Hackathon Team"}]
requires-python = ">=3.11"
dependencies = [
    "openenv>=0.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "server.app:main"

[tool.uv.scripts]
server = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
test = "pytest"
dev = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
